summary: Saiba o que há de novo com a funcionalidade de workloads de IA da fábrica de workloads. 
---
= Novidades na fábrica de workloads da BlueXP  para a GenAI
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Saiba o que há de novo com a capacidade generativa de cargas de trabalho de IA da fábrica de cargas de trabalho.



== 02 de fevereiro de 2025



=== Filtragem do tipo de arquivo para fontes de dados

O GenAI agora suporta a seleção de tipos de arquivo específicos para incluir na digitalização da fonte de dados quando você adiciona uma fonte de dados.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Adicione fontes de dados à base de conhecimento"]



=== Filtragem de data de modificação de arquivo para fontes de dados

O GenAI agora suporta arquivos de filtragem para incluir na verificação da fonte de dados por data de modificação quando você adiciona uma fonte de dados. Você pode escolher um intervalo de datas de modificação para os arquivos incluídos.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Adicione fontes de dados à base de conhecimento"]



=== Suporte para arquivos de imagem e suporte aprimorado para arquivos PDF

O GenAI agora suporta a digitalização de arquivos de imagem e imagens dentro de arquivos PDF (também conhecido como suporte a arquivos multimodais). Se você escolher arquivos de imagem, o texto das imagens é digitalizado para a fonte de dados e usado como dados. Essa capacidade inclui imagens em documentos PDF; se você incluir tipos de arquivo PDF, as imagens em cada PDF são digitalizadas para texto e esse texto é incluído nas informações da fonte de dados.

link:https://docs.netapp.com/us-en/workload-genai/create-knowledgebase.html#add-data-sources-to-the-knowledge-base["Adicione fontes de dados à base de conhecimento"]



=== Pesquisa híbrida e suporte de reclassificação
