@@ -19,6 +19,14 @@ Saiba o que há de novo com a capacidade generativa de cargas de trabalho de IA 
 
 
 
+=== Suporte para modelos de fundação Amazon Nova
+
+O GenAI agora suporta os modelos de fundação Amazon Nova. São suportados Amazon Nova Micro, Amazon Nova Lite e Amazon Nova Pro.
+
+link:https://docs.netapp.com/us-en/workload-genai/requirements.html["Requisitos do GenAI"]
+
+
+
 === Filtragem do tipo de arquivo para fontes de dados
 
 O GenAI agora suporta a seleção de tipos de arquivo específicos para incluir na digitalização da fonte de dados quando você adiciona uma fonte de dados.
